2005-07-07  Aidan Kehoe  <kehoea@parhasard.net>

	* console-msw.c:
	* console-msw.c (mswindows_perhaps_init_unseen_key_defaults):
	* console-msw.c (vars_of_console_mswindows):
	Rename Qseen_characters to Vmswindows_seen_characters, dump it
	when pdump is in use. 
	
	* console-tty.c (tty_perhaps_init_unseen_key_defaults):
	* console-tty.c (vars_of_console_tty):
	Rename Qseen_characters to Vttyxo_seen_characters, dump it
	when pdump is in use. 

2005-06-29  Marcus Crestani  <crestani@xemacs.org>

	Fix C++ build for unexec.
	* unexelf.c: Adjust fatal and unexec to the declarations in
	lisp.h.
	* unexelf.c (unexec): Remove unneeded arguments from fatal calls.

2005-07-03  Aidan Kehoe  <kehoea@parhasard.net>

	* event-Xt.c:
	* event-gtk.c:
	* events.c (event_to_character):
	* general-slots.h:
	Move the Qkey_mapping variable to general-slots.h, now that it's
	used outside the platform specific keyboard warning code. 

2005-06-28  Marcus Crestani  <crestani@xemacs.org>

	* console-x.c (x_perhaps_init_unseen_key_defaults): Use
	build_intstring to avoid type error.
	* event-Xt.c (x_keysym_to_emacs_keysym): Add cast to avoid type
	error.

2005-06-28  Marcus Crestani  <crestani@xemacs.org>

	* .cvsignore: Add dump-size, xemacs.def, xemacs.def.in.

2005-06-28  Marcus Crestani  <crestani@xemacs.org>

	* gpmevent.c: Remove workaround.
	* gpmevent.c (Fgpm_enable): Use GET_DEFUN_LISP_OBJECT to get
	Lisp_Object of a built-in function.
	* gpmevent.c (syms_of_gpmevent): Remove workaround.
	* lisp.h (GET_DEFUN_LISP_OBJECT): New. Returns Lisp_Object of a
	DEFUN.
	* tooltalk.c (init_tooltalk): Use GET_DEFUN_LISP_OBJECT to get
	Lisp_Object of a built-in function.

2005-06-26  Aidan Kehoe  <kehoea@parhasard.net>

	* event-stream.c (command_builder_find_leaf):
	* mule-ccl.c (POSSIBLE_LEADING_BYTE_P):
	* mule-ccl.c (ccl_driver):
	Couple of build fixes. 
	
2005-06-26  Aidan Kehoe  <kehoea@parhasard.net>

	* mule-ccl.c (POSSIBLE_LEADING_BYTE_P): Add.