@@ -1,3 +1,9 @@
+2005-07-11  Atanu Ghosh <atanu@icsi.berkeley.edu>
+
+	* sysdll.c (dll_open): Under MacOS X return NULL under the
+	filename is NULL.  Fixes problems finding local symbols under 10.4
+	(Tiger)
+
 2005-07-07  Aidan Kehoe  <kehoea@parhasard.net>
 
 	* console-msw.c:
